modify how files are built with webpack

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
         border-radius: 5px;
         box-shadow: 1px 1px 11px grey;
         padding: 10px;
+        max-width: 800px;
+        margin: 0 auto;
       }
 
       .ck .ck-editor__nested-editable.ck-editor__nested-editable_focused, .ck .ck-editor__nested-editable:focus {
@@ -21,6 +23,6 @@
     <div id="editor">
     </div>
 
-    <script src="dist/bundle.js"></script>
+    <script src="build/bundle.js"></script>
   </body>
 </html>
